# sbom-tools

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: bindings.yml  codeql.yml  fuzz.yml  publish-crates.yml  rust.yml  scorecard.yml  tag-integrity.yml
benches/: large_sbom.rs
bindings/go/: README.md  go.mod  sbomtools.go  sbomtools_test.go
bindings/swift/: Package.swift  README.md
crates/sbom-tools-ffi/: Cargo.toml
crates/sbom-tools-ffi/src/: lib.rs
dagger/rust-sdk/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  CRA_COMPLIANCE.md  standards-support-plan.md
scripts/: build-bindings-mvp.sh  release.sh  setup-homebrew-tap-protection.sh  setup-tag-ruleset.sh  test-bindings-dedup.sh
src/: error.rs  ffi.rs  lib.rs  main.rs
src/cli/: cra_docs.rs  cra_standards_watch.rs  diff.rs  enrich.rs  license_check.rs  merge.rs  mod.rs  multi.rs  quality.rs  query.rs  tailor.rs  validate.rs  verify.rs  (+2 more)
tests/: cbom_tests.rs  conformance_ffi.rs  cra_adjacent_regulation_tests.rs  cra_conformity_summary_tests.rs  cra_docs_tests.rs  cra_golden_fixtures_tests.rs  cra_oss_steward_tests.rs  cra_p1_p2_gaps_tests.rs  cra_p5_tests.rs  cra_product_class_tests.rs  cra_readiness_tests.rs  csaf_emit_tests.rs  csaf_tests.rs  eu_ai_act_tests.rs  ffi_bindings.rs  ffi_regression.rs  ffi_schema_snapshots.rs  integration_tests.rs  pipeline_tests.rs  proptest_matching.proptest-regressions  proptest_matching.rs  proptest_parsers.rs  proptest_types.rs  sarif_help_uri_tests.rs  showcase_cli_tests.rs  vex_tests.rs  watch_tests.rs
(+217 files in other folders)
